Project 2/force-app/main/default/objects/Account/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <summarizedField>AccountQuiz__c.Score__c</summarizedField>
    <summaryForeignKey>AccountQuiz__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>