Project 2/force-app/main/default/objects/Account/fields/Quiz_Average__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Average__c</fullName>
    <label>Quiz Average</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>