Project 2/force-app/main/default/objects/Account/fields/QuizNum__c.field-meta.xml
<CustomField>
    <fullName>QuizNum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quiz Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>