Project 2/force-app/main/default/objects/Account/fields/ranking__c.field-meta.xml
<CustomField>
    <fullName>ranking__c</fullName>
    <label>ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>